erDiagram
    auth_users ||--o{ cards : "user_id"
    auth_users ||--o{ user_fcm_tokens : "user_id"
    auth_users ||--o| user_mail_settings : "user_id"
    auth_users ||--o| user_nickname : "user_id"
    auth_users ||--o| user_profile_details : "user_id"
    prefectures ||--o{ user_profile_details : "prefecture_id"

    auth_users {
        uuid id PK "ユーザーID (Supabase Auth)"
    }

    user_profile_details {
        uuid id PK "ID"
        uuid user_id FK "ユーザーID"
        date birthday "生年月日"
        integer sex "性別"
        text tele_num "電話番号"
        text postal_code "郵便番号"
        integer prefecture_id FK "都道府県ID"
        text address1 "住所1"
        text address2 "住所2"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    user_mail_settings {
        uuid id PK "ID"
        uuid user_id FK "ユーザーID"
        boolean is_send_related_rewards "リワード関連メール送信設定"
        boolean is_send_advance_product_announce "商品先行告知メール送信設定"
        boolean is_html_mail "HTMLメール設定"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    user_nickname {
        uuid user_id FK "ユーザーID"
        text nick_name "ニックネーム"
    }

    user_fcm_tokens {
        text fcm_token "FCMトークン"
        boolean is_notify "通知設定"
        uuid user_id FK "ユーザーID"
        text device_id PK "デバイスID"
        text device_name "デバイス名"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    pre_signup_users {
        uuid id PK "ID"
        text token "トークン"
        text email "メールアドレス"
        timestamptz created_at "作成日時"
        timestamptz expires_at "有効期限"
    }

    cards {
        uuid id PK "ID"
        text card_id UK "カードID"
        uuid user_id FK "ユーザーID"
        text card_name "カード名"
        text image_url "画像URL"
        integer balance "残高"
        boolean is_main "メインカードフラグ"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    prefectures {
        integer id PK "ID"
        text name "都道府県名"
    }
